plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.2'
	id 'io.spring.dependency-management' version '1.1.2'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
	id "org.sonarqube" version "4.3.1.3277"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
java {
	sourceCompatibility = '18'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring
	implementation 'org.springframework.boot:spring-boot-starter-websocket:'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
	implementation 'org.springframework.boot:spring-boot-starter-security:'
	implementation 'org.springframework.boot:spring-boot-starter-web:'
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.12'
	implementation 'org.springframework:spring-messaging:' // Use the appropriate version
	annotationProcessor group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.7.3'
	compileOnly('org.springframework.boot:spring-boot-devtools:3.0.4')

	// postgres
	runtimeOnly 'org.postgresql:postgresql'

	// Google Gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
	// Apache Commons Codec
	implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'

	// JWT
	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
	implementation group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	// Lombok
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'
	// Mapstruct
	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.2.Final'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.2.Final'

	//Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.4'
	implementation group: 'commons-validator', name: 'commons-validator', version: '1.7'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-ui:1.6.6'
	// Testing
	testImplementation "com.h2database:h2:1.4.200"
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
	testImplementation 'org.springframework.security:spring-security-test:6.0.2'
}


sonar {
	properties {
		property "sonar.projectKey", "nypag-1_uk-223"
		property "sonar.token","92d1ecda325d3ff2db32d35611091f1ce7ba79b9"
		property "sonar.organization", "nypag-1"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.qualitygate.wait", true
	}
}
test {
	useJUnitPlatform()
}
